# rules_proto_grpc-missing-declaration-info-example

./: BUILD.bazel  README.md  WORKSPACE  package.json  server.ts  service.proto
